--- a/CarInsurance/CarInsurance/Views/Insuree/Admin.cshtml
+++ b/CarInsurance/CarInsurance/Views/Insuree/Admin.cshtml
@@ -1,4 +1,46 @@
-﻿@using CarInsurance.Models;
-@model CarInsurance.Models.Table
+﻿@model IEnumerable<CarInsurance.Models.Table>
 
-foreach (var entries in Model)
+@{
+    ViewBag.Title = "Admin";
+}
+
+<h2>Admin2</h2>
+
+<p>
+    @Html.ActionLink("Create New", "Create")
+</p>
+<table class="table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.FirstName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.LastName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.EmailAddress)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Quote)
+        </th>
+        <th></th>
+    </tr>
+
+@foreach (var entry in Model) {
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => entry.FirstName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => entry.LastName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => entry.EmailAddress)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => entry.Quote)
+        </td>
+    </tr>
+}
+
+</table>
